[project]
name = "suas-mission-planner"
version = "1.0.0"
description = "Async LangGraph sUAS mission planning API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy[asyncio]==2.0.44",
    "aiosqlite==0.21.0",
    "psycopg[binary]==3.3.4",
    "psycopg-pool==3.3.0",
    "httpx==0.28.1",
    "tenacity==9.1.4",
    "langgraph==1.2.7",
    "langgraph-checkpoint-postgres==3.1.0",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "ruff==0.14.4",
    "mypy==1.18.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["suas*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = true
disallow_subclassing_any = true

# Framework interop: LangGraph's compiled-graph and node-union generics are
# impractical to fully parameterize at our call sites. We relax ONLY the
# specific interop error codes in ONLY these thin wiring modules. All domain
# logic (calculations, schemas, services, db) stays fully strict.
[[tool.mypy.overrides]]
module = ["suas.graph.workflow"]
disallow_any_generics = false
disable_error_code = ["call-overload"]

[[tool.mypy.overrides]]
module = ["suas.graph.checkpointer"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["suas.api.dependencies", "suas.api.routes"]
disallow_any_generics = false

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET",
    "ARG", "ERA", "RUF", "TCH", "T20", "PTH", "PERF", "LOG",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
